--- a/contact.html
+++ b/contact.html
@@ -42,23 +42,10 @@
 				<div class="main col-md-8">
 					<div class="row">
 						<div class="col-md-12">
-							<h1 class="page-title">CONTACT</h1>
-							<form class="contact-form">
-							<div class="form-group">
-							  <label for="inputName">Name</label>
-							  <input type="text" class="form-control" id="inputName" placeholder="Full Name Here">
-							</div>
-							  <div class="form-group">
-							    <label for="inputEmail">Email address</label>
-							    <input type="email" class="form-control" id="inputEmail" placeholder="you@email.com">
-							  </div>
-							  <div class="form-group">
-							    <label for="inputMessage">Message</label>
-							    <textarea class="form-control" rows="5"></textarea>
-							  </div>
-
-							  <button type="submit" class="btn btn-primary">Submit</button>
-							</form>
+							<h1 class="page-title">CONTACT INFORMATION</h1>
+							<p>Phone: (360) 481 - 8868 </p>
+							<p>E-mail: andrewjordanreyes@gmail.com</p>
+							<p></p>
 						</div>
 					</div>  
 				</div>  
@@ -70,12 +57,12 @@
 					<ul class="social">
 						<li><a href="https://github.com/andrwjrdn/" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/andrwjrdn" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-						<li><a href="https://twitter.com/notandrwjrdn target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+						<li><a href="./assets/images/resume.pdf" target="_blank"><i class='fa fa-resumeicon.jpg-square'></i><img src="./assets/images/resumeicon.jpg" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>   
 			</div>  
 		</div>  
 		<footer class="footer">
-			&copy; Copyright 2017 Andrew Reyes
+			&copy; Copyright 2019 Andrew Reyes
 		</footer>
     </body>
