--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
 						</div>
 						<div class="col-md-8">
 							<h1 class="page-title">ABOUT ME</h1>
-							<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. In repudiandae similique eligendi cupiditate fugit dolores explicabo itaque beatae sed vero!
+							<h2 class="lead">Full-Stack Web Developer in Training</h2>
+							<p>
+								Graduated from Washington State University in 2015 with a B.A. in Human Develpment.
 							</p>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos distinctio repudiandae consectetur ipsa dignissimos vero numquam aliquam ab quis consequatur.
+								A career working in over 5 years of Retail, 2 years in Human Resources, and 2 years in Education have molded me into being a great asset for a team-like environment.
 							</p>
+							<p>Experienced with multiple programming languages that include: Javascript, JQuery, Node JS, CSS, and HTML.</p>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ut et dolor mollitia, libero id sequi illo. Alias, quis est!
-							</p>
-							<p>
-								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam omnis distinctio dolor qui sit repellendus aspernatur nulla voluptates nihil consequuntur!
+								I have always had a passion for technology and have now immersed myself in the culture of Web Development. I have an eye for spotting out bugs in code and delivering quality feedback, but I do enjoy working on the UI aspects of applications.
 							</p>
 						</div>
 						<div class="col-md-1">&nbsp;</div>
@@ -70,7 +70,7 @@
 					<ul class="social">
 						<li><a href="https://github.com/andrwjrdn/" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/andrwjrdn" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-						<li><a href="https://twitter.com/notandrwjrdn target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+						<li><a href="./assets/images/resume.pdf" target="_blank"><i class='fa fa-resumeicon.jpg-square'></i><img src="./assets/images/resumeicon.jpg" aria-hidden="true"></i></a></li>
 					</ul>
 				</div> 
 			</div> 
