--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 					<ul class="social">
 						<li><a href="https://github.com/andrwjrdn/" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/andrwjrdn" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-						<li><a href="./assets/images/resume.pdf" target="_blank"><i class='fa fa-resumeicon.jpg-square'></i><img src="./assets/images/resumeicon.jpg" aria-hidden="true"></i></a></li>
+						<li><a href="./assets/images/resume.pdf" target="_blank"><i class="fas fa-file"></i></a></li>
 					</ul>
 				</div>   
 			</div>  
