liri bot hw added

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,18 @@
 						</div>
 					</div>
 
+						<div class="row project">
+							<div class="col-sm-8 project-thumb">
+										<a href="https://github.com/andrwjrdn/liri-node-app.git">
+											<img href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiiu5OL-oDiAhVYo54KHUYCBRsQjRx6BAgBEAU&url=https%3A%2F%2Fgithub.com%2Ffzbo%2FLIRI-Bot&psig=AOvVaw39XHgOyTKloqfcK2LQvQtC&ust=1557027631208520" class="img-responsive bottom" alt="Portfolio thumbnail" id='idbug'>
+										</a>
+							</div> 
+							<div class="col-sm-4 project-caption">
+										<h3>LIRI Bot</h3>
+										<p class="description">Search your favorite artist, band, song, movies and concert times!</p>
+							</div> 
+						</div> 
+
 					<div class="row project">
 							<div class="col-sm-8 project-thumb">
 										<a href="https://lbeagleeyes.github.io/Project-1/">
