updating projects/fixing css bugs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <header>
           <!--Navbar-->
-          <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+          <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,13 +25,13 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#portfolio">Portfolio</a>
+                    <a class="nav-link" href="#portfolio">PORTFOLIO</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="#contact">CONTACT</a>
                   </li>
                 </ul>
               </div>
@@ -48,10 +48,10 @@
                 <div class="row">
                   <!--Grid column-->
                   <div class="col-md-12 mb-4 white-text text-center">
-                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Full Stack Web Developer</strong></h5>
+                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Web Developer</strong></h5>
                     <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 wow fadeInDown" data-wow-delay="0.3s"><strong>Andrew Reyes</strong></h1>
                     <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>JavaScript | Node | Express | SQL | HTML | CSS | MongoDB </strong></h5>
+                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>JavaScript | Node | Express | MySQL | HTML | CSS | MongoDB | REACT </strong></h5>
                   </div>
                   <!--Grid column-->
                 </div>
@@ -75,13 +75,13 @@
                     <div class="card">
                         <img src="images/selfie.jpeg" alt="Avatar" class= "img" style="width:100%">
                         <div class="container">
-                          <h4><b>Andrew Reyes</b></h4> 
-                          <p>Full Stack Web Developer</p>
+                          <!-- <h4><b>Andrew Reyes</b></h4> 
+                          <p>Full Stack Web Developer</p> -->
                         </div>
                       </div>
                 </div>
                 <div class="col-md-6">
-                  <h2>About Me</h2>
+                  <h2>ABOUT ME</h2>
                   <br>
                   <p>
                     I graduated with a B.A. in Human Development from Washington State University. Since graduating in 2015, I've worked 2 years in HR type roles and 2 years in Education as a Before and After School Program Manager for the Issaquah School District. As a kid, I used to build website layouts with HTML and CSS as a preferred hobby but never pursued it as a career until now.
@@ -106,9 +106,20 @@
 
     <div class="container" id="portfolio">
     <div class="row justify-content-center mt-5">
-        <h2>MY PROJECTS</h2>
+        <h2>GROUP PROJECTS</h2>
     </div>
     <div class="row justify-content-center mt-4">
+      <div class="card" style="width: 20rem;">
+          <img class="card-img-top" src="images/rendezvous.jpg" alt="Card image" height="300px" width="200px">
+          <div class="card-body">
+              <h4 class="card-title"> 
+              <span>&#60;</span> rendezvous <span> &#8725;</span> <span>&#62;</span> </h4>
+              <p>A meet-up app designed for developers to network and further their coding knowledge</p>
+              <hr>
+              <a href="https://code-meetup.herokuapp.com/" class="btn btn-secondary">Website</a>
+              <a href="https://github.com/Pironj/Code-Meetup" class="btn">GitHub</a>
+          </div>
+      </div>
       <div class="card" style="width: 20rem;">
           <img class="card-img-top" src="images/plateful.png" alt="Card image" height="300px" width="200px">
           <div class="card-body">
@@ -127,6 +138,63 @@
               <hr>
               <a href="https://andrwjrdn.github.io/Project-1/" class="btn btn-secondary">Website</a>
               <a href="https://github.com/andrwjrdn/Project-1" class="btn">GitHub</a>
+          </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container" id="portfolio">
+    <div class="row justify-content-center mt-5">
+        <h2>INDIVIDUAL PROJECTS</h2>
+    </div>
+    <div class="row justify-content-center mt-4">
+      <div class="card" style="width: 20rem;">
+          <img class="card-img-top" src="images/googlebooksearch.jpg" alt="Card image" height="300px" width="200px">
+          <div class="card-body">
+              <h4 class="card-title">Google Book Search</h4>
+              <p>Enter in as many leftover ingredients you have at home and Plateful will give you recipes to cook. You can also plan out your meal plan for 3 days!</p>
+              <hr>
+              <a href="https://sheltered-mesa-29342.herokuapp.com/" class="btn btn-secondary">Website</a>
+              <a href="https://github.com/andrwjrdn/google-book-search/tree/master/google-book-search" class="btn">GitHub</a>
+          </div>
+      </div>
+      <div class="card" style="width: 20rem;">
+          <img class="card-img-top" src="images/memorygame.jpg" alt="Card image" height="300px" width="200px">
+          <div class="card-body">
+              <h4 class="card-title">Memory Game (React)</h4>
+              <p>Memory game where users would earn points by clicking on a player. Once a player has been clicked, it may not be picked again until all 12 players have been chosen.</p>
+              <hr>
+              <a href="https://github.com/andrwjrdn/react-clicky-game/tree/master/react-clicky-game" class="btn btn-secondary">Website</a>
+              <a href="https://andrwjrdn.github.io/react-clicky-game/" class="btn">GitHub</a>
+          </div>
+      </div>
+      <div class="card" style="width: 20rem;">
+          <img class="card-img-top" src="images/seattlesports.jpg" alt="Card image" height="300px" width="200px">
+          <div class="card-body">
+              <h4 class="card-title">Seattle Sports News Scraper</h4>
+              <p>Enter in as many leftover ingredients you have at home and Plateful will give you recipes to cook. You can also plan out your meal plan for 3 days!</p>
+              <hr>
+              <a href="https://multicultural-loon-31874.herokuapp.com/articles" class="btn btn-secondary">Website</a>
+              <a href="https://github.com/andrwjrdn/SeattleSportsNewsScraper" class="btn">GitHub</a>
+          </div>
+      </div>
+      <div class="card" style="width: 20rem;">
+          <img class="card-img-top" src="images/nodeapp.jpg" alt="Card image" height="300px" width="200px">
+          <div class="card-body">
+              <h4 class="card-title">LIRI Node App</h4>
+              <p>LIRI is a Language Interpretation and Recognition Interface. LIRI will be a command line node app that takes in parameters and gives you back data. </p>
+              <hr>
+              <a href="https://github.com/andrwjrdn/liri-node-app" class="btn">GitHub</a>
+          </div>
+      </div>
+      <div class="card" style="width: 20rem;">
+          <img class="card-img-top" src="images/trainscheduler.jpg" alt="Card image" height="300px" width="200px">
+          <div class="card-body">
+              <h4 class="card-title">Train Scheduler</h4>
+              <p>This train schedule application incorporates Firebase to host arrival and departure data. This app will retrieve and manipulate this information with Moment.js.</p>
+              <hr>
+              <a href="https://andrwjrdn.github.io/Train-Scheduler/" class="btn btn-secondary">Website</a>
+              <a href="https://github.com/andrwjrdn/Train-Scheduler" class="btn">GitHub</a>
           </div>
       </div>
       <div class="card" style="width: 20rem;">
