--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                   <h2>ABOUT ME</h2>
                   <br>
                   <p>
-                    I graduated with a B.A. in Human Development from Washington State University. Since graduating in 2015, I've worked 2 years in HR type roles and 2 years in Education as a Before and After School Program Manager for the Issaquah School District. As a kid, I used to build website layouts with HTML and CSS as a preferred hobby but never pursued it as a career until now.
+                  Graduated with a B.A. in Human Development from Washington State University in 2015. Since then I have worked in the HR and Education fields, and recently graduating from University of Washington's Full-Stack Bootcamp.  
                   </p>
 
                   <p>
-                    After taking one free Javascript class online, it definitely re-kindled my flame for pursuing a career as a Web Developer. Coding challenges me in ways I've never been pushed before and there is no better feeling than solving those bumps in the roads that take hours maybe days to debug. 
+                    Before enrolling into the Bootcamp, I've built websites with HTML and CSS. After taking one free Javascript class online, it definitely sparked my flame to pursue a career as a Developer. Coding challenges me in ways I've never been pushed before and there is no better feeling than solving those bumps in the roads that take hours maybe days to debug. 
                   </p>
 
                   <p>
@@ -152,7 +152,7 @@
           <img class="card-img-top" src="images/googlebooksearch.jpg" alt="Card image" height="300px" width="200px">
           <div class="card-body">
               <h4 class="card-title">Google Book Search</h4>
-              <p>Enter in as many leftover ingredients you have at home and Plateful will give you recipes to cook. You can also plan out your meal plan for 3 days!</p>
+              <p>Search from any book using the Google Books API!</p>
               <hr>
               <a href="https://sheltered-mesa-29342.herokuapp.com/" class="btn btn-secondary">Website</a>
               <a href="https://github.com/andrwjrdn/google-book-search/tree/master/google-book-search" class="btn">GitHub</a>
