--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     In my freetime, my passion is to DJ. I've been DJing for a couple of years now and am slowly securing gigs around the Greater Seattle area night life. 
                   </p>
                   <div class="row justify-content-center">
-                    <a href="images/resume.pdf" class="btn btn-secondary" target="_blank">My Resume</a>
+                    <a href="images/Andrew_Reyes_Resume.pdf" class="btn btn-secondary" target="_blank">My Resume</a>
                   </div>
                 </div>
                 <!--Grid column-->
@@ -267,7 +267,7 @@
                 <li>|</li>
                 <li><a href="https://www.linkedin.com/in/andrew-reyes-05b262108/" class="links" target="_blank">LINKEDIN</a></li>
                 <li>|</li>
-                <li><a href="images/resume.pdf" class="links" target="_blank">RESUME</a></li>
+                <li><a href="images/Andrew_Reyes_Resume.pdf" class="links" target="_blank">RESUME</a></li>
             </ul>
         </nav>
     </div>
