--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Web Developer</strong></h5>
                     <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 wow fadeInDown" data-wow-delay="0.3s"><strong>Andrew Reyes</strong></h1>
                     <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>JavaScript | Node | Express | MySQL | HTML | CSS | MongoDB | REACT </strong></h5>
+                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>JavaScript | Node | Express | MySQL | HTML | CSS | MongoDB | REACT | Python </strong></h5>
                   </div>
                   <!--Grid column-->
                 </div>
