--- a/index.html
+++ b/index.html
@@ -48,10 +48,14 @@
                 <div class="row">
                   <!--Grid column-->
                   <div class="col-md-12 mb-4 white-text text-center">
-                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Web Developer</strong></h5>
+                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Data Analyst & Web Developer</strong></h5>
                     <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 wow fadeInDown" data-wow-delay="0.3s"><strong>Andrew Reyes</strong></h1>
                     <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>JavaScript | Node | Express | MySQL | HTML | CSS | MongoDB | REACT | Python </strong></h5>
+                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s">
+                      <strong><p>JavaScript | Node | Express | MySQL | HTML | CSS | MongoDB | REACT | Python </p></strong>
+                      <strong><p>PowerBI | Advanced MS Excel | DAX | Google Analytics | Tableau  </p></strong>
+                    
+                    </h5></h5>
                   </div>
                   <!--Grid column-->
                 </div>
@@ -73,7 +77,7 @@
                 <!--Grid column-->
                 <div class="col-md-6 justify-content-center">
                     <div class="card">
-                        <img src="images/selfie.jpeg" alt="Avatar" class= "img" style="width:100%">
+                        <img src="images/selfie.jpg" alt="Avatar" class= "img" style="width:100%">
                         <div class="container">
                           <!-- <h4><b>Andrew Reyes</b></h4> 
                           <p>Full Stack Web Developer</p> -->
@@ -84,15 +88,15 @@
                   <h2>ABOUT ME</h2>
                   <br>
                   <p>
-                  Graduated with a B.A. in Human Development from Washington State University in 2015. Since then I have worked in the HR and Education fields, and recently graduating from University of Washington's Full-Stack Bootcamp.  
+                   My Name is Andrew Reyes, and I work as a Data Analyst for TekSystems as a client contract with Microsoft. I hold a Bachelor's degree in Human Development and Psychology from Washington State University.
                   </p>
 
                   <p>
-                    Before enrolling into the Bootcamp, I've built websites with HTML and CSS. After taking one free Javascript class online, it definitely sparked my flame to pursue a career as a Developer. Coding challenges me in ways I've never been pushed before and there is no better feeling than solving those bumps in the roads that take hours maybe days to debug. 
+                     Since I was young, I have always enjoyed solving puzzles. So that's how I look at large data sets. To me it is one big buzzle I want to solve. Finding patterns that not many can see is a challenge I like to take.
                   </p>
-
+                    In 2019, I took a very rigorous Full-Stack Web Development certification course at the University of Washington where I earned my certificate of completion. Although it wasn't geared specifically toward Data Analytics, a lot of my best work was done managing the databases for group projects.
                   <p>
-                    In my freetime, my passion is to DJ. I've been DJing for a couple of years now and am slowly securing gigs around the Greater Seattle area night life. 
+                     
                   </p>
                   <div class="row justify-content-center">
                     <a href="images/Andrew_Reyes_Resume.pdf" class="btn btn-secondary" target="_blank">My Resume</a>
@@ -101,6 +105,33 @@
                 <!--Grid column-->
               </div>
               <!--Grid row-->
+            </div>
+          </div>
+
+          <div class="container" id="portfolio">
+            <div class="row justify-content-center mt-5">
+                <h2>DATA ANALYSIS</h2>
+            </div>
+            <div class="row justify-content-center mt-4">
+              <div class="card" style="width: 20rem;">
+                  <img class="card-img-top" src="images/bikesales.png" alt="Card image" height="300px" width="200px">
+                  <div class="card-body">
+                      <h4 class="card-title"> Bike Sales </h4>
+                      <p>Walkthrough of data cleaning process and dashboard presentation in Excel</p>
+                      <hr>
+                      <a href="https://github.com/andrwjrdn/bikeSales" class="btn">GitHub</a>
+                  </div>
+              </div>
+              <div class="card" style="width: 20rem;">
+                  <img class="card-img-top" src="images/gamingconsoles.png" alt="Card image" height="300px" width="200px">
+                  <div class="card-body">
+                      <h4 class="card-title">Game Consoles Sales</h4>
+                      <p>Small data set of gaming console sales to create a simple dashboard in Power BI</p>
+                      <hr>
+                      <a href="https://github.com/andrwjrdn/gameConsoles" class="btn">GitHub</a>
+                  </div>
+              </div>
+              </div>
             </div>
           </div>
 
