--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   </p>
 
                   <p>
-                     Since I was young, I have always enjoyed solving puzzles. So that's how I look at large data sets. To me it is one big buzzle I want to solve. Finding patterns that not many can see is a challenge I like to take.
+                     Since I was young, I have always enjoyed solving puzzles. So that's how I look at large data sets. To me it is one big puzzle I want to solve. Finding patterns that not many can see is a challenge I like to take.
                   </p>
                     In 2019, I took a very rigorous Full-Stack Web Development certification course at the University of Washington where I earned my certificate of completion. Although it wasn't geared specifically toward Data Analytics, a lot of my best work was done managing the databases for group projects.
                   <p>
