--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
                       <a href="https://github.com/andrwjrdn/gameConsoles" class="btn">GitHub</a>
                   </div>
               </div>
+              <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="images/customer.png" alt="Card image" height="300px" width="200px">
+                <div class="card-body">
+                    <h4 class="card-title">Customer Employee Sales</h4>
+                    <p>Large data set using DAX calculations to find Total Sales, Total Revenue, Total Profit, and Profit Margin.</p>
+                    <hr>
+                    <a href="https://github.com/andrwjrdn/CustomerEmployeeSales" class="btn">GitHub</a>
+                </div>
               </div>
             </div>
           </div>
